<resources>
    <string name="app_name">SgpCo</string>
    <string name="internalError">خطای سرور</string>
    <string name="jsonError">خطای نوع اطلاعات ورودی</string>
    <string name="communicationError">خطا در برقراری ارتباط</string>
    <string name="unauthorized">کاربر غیر مجاز</string>
    <string name="notFound">اطلاعات یافت نشد</string>
    <string name="mobile_hint">09xxxxxxxxx</string>
    <string name="mobile_text">موبایل</string>
    <string name="password_hint">*******</string>
    <string name="password_text">رمز عبور</string>
    <string name="login">ورود</string>
    <string name="register">ثبت نام</string>
    <string name="name_hint">نام را وارد کنید</string>
    <string name="name_text">نام</string>
    <string name="family_hint">نام خانوادگی</string>
    <string name="family_text">نام خانوادگی را وارد کنید</string>
    <string name="drawer_opened">باز</string>
    <string name="drawer_closed">بسته</string>
    <string name="typeNameProject">نوع و نام پروژه</string>
    <string name="next">بعدی</string>
    <string name="befor">قبلی</string>
    <string name="name_project">نام پروژه</string>
    <string name="select_city">انتخاب شهر</string>
    <string name="cancel">انصراف</string>
    <string name="useful_area">متراژ مساحت مفید</string>
    <string name="cool_area">متراژ مساحت سرد</string>
    <string name="calucate_text">محاسبه</string>
    <string name="enter_title">%1$s را وارد کنید</string>
    <string name="enter_mobile">موبایل را وارد کنید</string>
    <string name="invalid_mobile">موبایل نامعتبر است</string>
    <string name="enter_password">رمز عبور را وارد نمایید</string>
    <string name="invalid_password">رمز عبور باید بیش از ۶ رقم باشد</string>
    <string name="ok">باشه</string>
    <string name="fill_following">پر کردن موارد زیر الزامی است</string>
    <string name="dialog_yes">بله</string>
    <string name="dialog_no">خیر</string>
    <string name="retry_text">تلاش مجدد</string>
    <string name="invalid_value">%1$s نامعتبر است</string>
    <string name="code_verify">کد</string>
    <string name="enter_code">کد مورد نظر را وارد کنید</string>
    <string name="invalid_code">کد نامعتبر است</string>
    <string name="inter_code">کد ارسال شده را وارد کنید</string>
    <string name="send">ارسال</string>
    <string name="forget_password">رمز عبور خود را فراموش کرده اید؟</string>
    <string name="send_code">ارسال کد</string>
    <string name="desc_for_enter_mobile">برای دریافت کد شماره موبایل خود را وارد کنید</string>
    <string name="desc_for_enter_code">کد مورد نظر را وارد کنید</string>
    <string name="group_spg">گروه صنایع گیتی پسند</string>
    <string name="group_spg_en">www.spgco.com</string>
    <string name="sureـyouـwantـtoـleave">آیا برای خروج مطمئن هستید؟</string>
    <string name="slogan">برآورد اجناس سیستم گرمایش از کف</string>
    <string name="code_verify_enter">کد مورد نظر را وارد کنید</string>
    <string name="text_retry">در صورت عدم کد فعال سازی پس از یک قیقه مجددا از طریق دکمه ارسال مجدد تلاش کنید.</string>
    <string name="home">خانه</string>
    <string name="tab_register_home_txt">ساختن پروژه</string>
    <string name="add_customer">مشتری جدید</string>
    <string name="exit">خروج</string>
    <string name="create_project">ایجاد پروژه</string>
    <string name="enter_your_project_name">نام پروژه خود را وارد کنید</string>
    <string name="description_text">توضیحات</string>
    <string name="register_project">ثبت</string>
    <string name="select_type_name_project">نوع پروژه را انتخاب نمایید</string>
    <string name="select_province">انتخاب استان</string>
    <string name="select_customer">مشتری خود را انتخاب کنید</string>
    <string name="heat_source">منبع حرارتی</string>
    <string name="system_control_type">نوع کنترل سیستم</string>
    <string name="enter_name_family">نام و نام خانوادگی را وارد کنید</string>
    <string name="create">ایجاد</string>
    <string name="please_enter_name">لطفا نام را وارد کنید</string>
    <string name="update_customer">ویرایش</string>
    <string name="setting">تنظیمات</string>
    <string name="edit_profile">ویرایش کاربری</string>
    <string name="content">مطالب</string>
    <string name="gallery_photo">گالری تصاویر</string>
    <string name="intro_friend">معرفی به دوستان</string>
    <string name="contact_whit_us">تماس با ما</string>
    <string name="tvBrand">SGP</string>
    <string name="share_text">لطفا ما را به دوستان خود معرفی کنید.</string>
    <string name="share">اشتراک گذاری</string>
    <string name="register_info">ثبت اطلاعات</string>
    <string name="posts">نوشته ها</string>
    <string name="select_type_name_projects">انتخاب نوع پروژه</string>
    <string name="select_your_city">شهر خود را انتخاب کنید</string>
    <string name="selectd_heat_source">منبع حرارتی را انتخاب کنید</string>
    <string name="select_type_control_system">نوع کنترل سیستم را انتخاب کنید</string>
    <string name="enter_metr">متراژ خود را وارد کنید</string>
    <string name="enter_cold_area">متراژ سرد را وارد کنید</string>
    <string name="ordinary_system">سیستم معمولی</string>
    <string name="thermostatic_system">سیستم ترموستاتیک</string>
    <string name="gendar_of_floor">جنس کف را انتخاب کنید</string>
    <string name="next_page">مرحله بعد</string>
    <string name="projects">پروژه ها</string>
    <string name="customer">مشتری</string>
    <string name="customers">مشتری ها</string>
    <string name="systems">سیستم</string>
    <string name="city">شهر</string>
    <string name="observation_text">مشاهده</string>
    <string name="edit">ویرایش</string>
    <string name="type_of_space">نوع فضا را انتخاب کنید</string>
    <string name="select_type_space">نوع فضا را انتخاب کنید</string>
    <string name="remainingـtime">زمان باقی مانده: </string>
    <string name="second">ثانیه</string>
    <string name="retry_code_verify">برای ارسال مجدد کد کلیک نمایید</string>
    <string name="email">ایمیل : info@sgpmojiri.ir</string>
    <string name="phoneNumber">شماره تماس</string>
    <string name="support_email_delta">info@sgpmojiri.ir</string>
    <string name="search_type_project">نوع پروژه را جستجو کنید</string>
    <string name="search_heat_source">منبع حرارتی را جستجو کنید</string>
    <string name="search_province">استان خود را جستجو کنید</string>
    <string name="search_control_system">نوع کنترل سیستم را جستجو کنید</string>
    <string name="search_city">شهر خود را جستجو کنید</string>
    <string name="search_gender_floor">جنس کف خود را جستجو کنید</string>
    <string name="search_type_space">نوع فضا خود را جستجو کنید</string>
    <string name="unknown">نامشخص</string>
    <string name="receiving_information">در حال دریافت اطلاعات</string>
    <string name="connection_network">دستگاه خود را به اینترنت متصل کنید</string>
    <string name="first_select_state">ابتدا استان خود را انتخاب کنید</string>
    <string name="delete">حذف پروژه</string>
    <string name="nothing_found">هیچ پروژه یافت نشد</string>
    <string name="estimate">برآورد</string>
    <string name="password_textـconfirm">تایید رمز عبور</string>
    <string name="not_equal">رمز عبور و تایید آن یکسان نیست</string>
    <string name="sure_want_to_delete_customer">آیا از حذف مشتری اطمینان دارید؟</string>
    <string name="contact_us_desc" >برای مشاوره و کسب اطلاعات بیشتر، با دفاتر پشتیبانی و نظارت فنی گروه صنایع گیتی پسند تماس بگیرید:</string>
    <string name="office_tehran">دفتر تهران</string>
    <string name="office_esfahan">دفتر اصفهان</string>
    <string name="office_mashhad">دفتر مشهد</string>
    <string name="attention">متوجه شدم</string>
    <string name="info">فاصله یک متر از دیوارخارجی ساختمان که دارای پنجره بوده و نفوذ هوای سرد خواهیم داشت، دیوار مرزسرد نامیده می شود. لازم بذکر است آشپزخانه و حمام، مرز سرد ندارد.</string>
    <string name="cold_area">متراژ مرز سرد</string>
    <string name="about_sgp">بنيانگذاران بزرگترين بخش خصوصي كشور در صنعت تاسيسات و ساختمان، سنگ‌بناي آن را با راه‌اندازي مراكز تحقيقاتي پليمر، مكانيك و برق و يكي دو واحد توليدي، بیست سال پيش و با همراهي و همت تعدادي از جوانان مستعد و كوشاي ایرانی گذاشتند. نيت قلبي و انديشه راهبردي آنها، جلوگيري از خروج مواد خام نفتي از كشور، ايجاد اشتغال، توليد محصول ايراني و برجسته كردن نام ايران در پهنه كره خاكي {به ويژه در آسياي مركزي و حوزه خليج فارس} بود. استراتژي و راهبرد گيتي‌پسند اينگونه تعيين شد تا با بهره‌ مندي از دانش روز دنيا و شناخت پتانسيل‌هاي داخلي اعم از مواد معدني و نيروي انساني كارآمد، انواع محصول در سه بخش ساختمان و شهرسازي، شيميايي و پليمري، و كشاورزي و دامپروري توليد و به بازارهاي داخلي و خارجي عرضه شود به اميد آنكه حداكثر ارزش‌افزوده را براي ايرانيان به ارمغان آورد. حاصل مطالعات، آزمايشات و توليدات مجموعه در اين سال ها، ايجاد و آغاز به كار سي و هشت واحد توليدي در صنايع واسطه‌اي و پايين‌دستي، با توجيه فني و اقتصادي مناسب و راه‌اندازي و تجهيز هفت مركز تحقيقاتي ديگر شامل انرژي، متالوژي، ساختمان، شيمي، مكانيك، معدن و كشاورزي مي‌باشد. نتيجه بررسي‌هاي مراكز تحقيقاتي و فعاليت كارخانجات، توليد و عرضه بيش از بيست نوع محصول با برترين كيفيت و مناسب‌ترين قيمت به بازار است، محصولاتي كه گواهينامه‌ها و استانداردهاي ملي و بين‌المللي لازم را دريافت كرده و اين فرصت را براي گيتي پسند فراهم آورده اند تا با محصولات مشابه در بازارهاي داخلي و خارجي رقابت كند. گيتي‌پسند سال‌ها قبل با توليد لوله و اتصالات آذين و نيوپايپ، پاي در بازار صنعت تاسيسات كشور گذاشت. حضوري كه همواره نقش موثري در تغيير و اصلاح مدل‌هاي اجرايي در اين صنعت داشته است. كمي بعد از آذين‌لوله و نيوپايپ، ديگر برندهاي اين گروه صنعتي متولد شدند و هركدام مجموعه اي از محصولات پايه و كاربردي را به بازار مصرف ايرانيان عرضه داشتند. كيمياجاويد ، سپهرفوم ، نيوفلكس ، ديناپليمر ، نانوكيم ، گيتكو و نيووارم ساير برندهاي تجاري گيتي پسند هستند كه محصولات آن‌ها در صنايع نفت و پتروشيمي، پليمر، ساختمان، خودرو و... شناخته شده است و به صورت مستقيم يا غيرمستقيم در خانه و زندگي اغلب مردم ايران حضور دارند يا اينكه ماده اوليه توليد محصولات بسياري از واحدهاي توليدي در كشور شده اند. خانواده بزرگ گيتي پسند با پافشاري بر نيت قلبي موسسان كارآفرين اين مجموعه و تثبيت آن انديشه راهبردي، هم‌اكنون به يكي از نمادهاي اقتصاد مولد و توليدي با تكيه بر نيروي پرتوان و خوش فكر ايراني مبدل شده و قراراست با فراگير شدن نام و محصولات گيتي پسند در سراسر ايران و جهان، آن نگرش، به شكل مناسب و موثري گسترش پيدا كند. رشد و توسعه فردي و گروهي مستمر بالغ بر سه هزار نفر نيروي انساني، ارتقاي دائمي سطح كمي و كيفي دستگاه ها و تجهيزات فني در واحدهاي توليدي گروه، استفاده مداوم از دانش روز دنيا و در نهايت كسب رضايتمندي حداكثري گروه مشتريان محصولات اين گروه صنعتي، چهار اصل توسعه پايدار گيتي پسند مي‌باشند، اصولي كه برپايه رعايت اخلاق حرفه اي در اين مجموعه پايه‌گذاري شده و همواره در حال اجراست.</string>
    <string name="about_sgp_title">درباره گروه صنایع گیتی پسند</string>
    <string name="about_system_heat">درباره سیستم گرمایش از کف</string>
    <string name="about_application">درباره نرم افزار</string>
    <string name="about_application_desc">نرم افزار برآورد اقلام سیستم گرمایش از کف نیوپایپ، این امکان را برای کاربر فراهم می کند تا کاربر بتواند با استفاده از این برنامه براحتی اقلام مورد نیاز سیستم گرمایش از کف را به دو روش معمولی و ترموستاتیک محاسبه و بصورت لیست اقلام نیوپایپ در اختیار داشته باشد. اطلاعات، منابع مورد استفاده و محاسبات انجام شده در این نرم افزار، از استانداردهای مرجع نظیر ASHRAE استفاده شده است.</string>
</resources>