<?xml version="1.0" encoding="utf-8"?>

<com.spg.sgpco.baseView.BaseRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.RegisterActivity">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fillViewport="true">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_height_transparent"
            android:layout_marginStart="@dimen/margin_4"

            android:layout_marginEnd="@dimen/margin_4"
            app:cardBackgroundColor="@color/transparentwhite"
            app:cardCornerRadius="@dimen/all_raduis_app"
            app:cardElevation="@dimen/st_evaluation_cardView">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <com.spg.sgpco.baseView.BaseRelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dialog_height_transparent"
                    android:orientation="vertical">

                    <com.spg.sgpco.baseView.BaseImageView
                        android:id="@+id/logo"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/margin_4"
                        app:srcCompat="@drawable/logo" />

                    <com.spg.sgpco.customView.CustomEditText
                        android:id="@+id/edtName"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_edit_text_view"
                        android:layout_below="@+id/logo"
                        android:layout_marginStart="@dimen/margin_4"

                        android:layout_marginTop="@dimen/margin_1"
                        android:layout_marginEnd="@dimen/margin_4"
                        android:focusableInTouchMode="false"
                        app:edtIcon="@drawable/ic_person_gray"
                        app:hint="@string/name_hint"
                        app:inputType="NAME"
                        app:isRequired="true"
                        app:tvTitle="@string/name_text" />


                    <com.spg.sgpco.customView.CustomEditText
                        android:id="@+id/edtFamily"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_edit_text_view"
                        android:layout_below="@+id/edtName"
                        android:layout_marginStart="@dimen/margin_4"
                        android:layout_marginTop="@dimen/margin_1"
                        android:layout_marginEnd="@dimen/margin_4"
                        android:focusableInTouchMode="false"
                        app:edtIcon="@drawable/ic_person_gray"
                        app:hint="@string/family_hint"
                        app:inputType="NAME"
                        app:isRequired="true"
                        app:tvTitle="@string/family_text" />

                    <com.spg.sgpco.customView.CustomEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_edit_text_view"
                        android:layout_below="@id/edtFamily"
                        android:layout_marginStart="@dimen/margin_4"
                        android:layout_marginTop="@dimen/margin_1"
                        android:layout_marginEnd="@dimen/margin_4"
                        android:focusableInTouchMode="false"
                        app:edtIcon="@drawable/ic_lock_gray"
                        app:hint="@string/password_hint"
                        app:inputType="PASSWORD"
                        app:isRequired="true"
                        app:tvTitle="@string/password_text" />

                    <com.spg.sgpco.customView.CustomEditText
                        android:id="@+id/edtMobile"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_edit_text_view"
                        android:layout_below="@id/edtPassword"
                        android:layout_marginStart="@dimen/margin_4"
                        android:layout_marginTop="@dimen/margin_1"
                        android:layout_marginEnd="@dimen/margin_4"
                        android:focusableInTouchMode="false"
                        app:edtIcon="@drawable/ic_phone_android_gray"
                        app:hint="@string/mobile_hint"

                        app:inputType="MOBILE"
                        app:isRequired="true"
                        app:tvTitle="@string/mobile_text" />

                    <com.spg.sgpco.baseView.BaseTextView
                        android:id="@+id/btnRegister"
                        android:layout_width="@dimen/half_btn_width"
                        android:layout_height="@dimen/button_height"
                        android:layout_below="@+id/edtMobile"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/margin_4"
                        android:layout_marginTop="@dimen/margin_2"
                        android:layout_marginEnd="@dimen/margin_4"
                        android:background="@drawable/ripplered"
                        android:gravity="center"
                        android:layout_marginBottom="@dimen/margin_2"
                        android:text="@string/register"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_1"
                        app:fontType="Medium" />
                </com.spg.sgpco.baseView.BaseRelativeLayout>

            </ScrollView>

        </android.support.v7.widget.CardView>
    </ScrollView>

    <com.spg.sgpco.customView.RoundedLoadingView
        android:id="@+id/roundedLoadingView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</com.spg.sgpco.baseView.BaseRelativeLayout>


