<?xml version="1.0" encoding="utf-8"?>

<com.spg.sgpco.baseView.BaseRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.RegisterActivity">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fillViewport="true">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_height_transparent"
            android:layout_marginStart="@dimen/margin_4"

            android:layout_marginEnd="@dimen/margin_4"
            app:cardBackgroundColor="@color/transparentwhite"
            app:cardCornerRadius="@dimen/all_raduis_app"
            app:cardElevation="@dimen/st_evaluation_cardView">

            <com.spg.sgpco.baseView.BaseRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialog_height_transparent"
                android:gravity="center"
                android:orientation="vertical">

                <com.spg.sgpco.baseView.BaseImageView
                    android:id="@+id/logo"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_4"
                    app:srcCompat="@drawable/logo" />


                <com.spg.sgpco.baseView.BaseTextView
                    android:id="@+id/txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/logo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="@dimen/margin_1"
                    android:layout_marginTop="@dimen/margin_4"
                    android:layout_marginEnd="@dimen/margin_1"
                    android:text="@string/desc_for_enter_code"
                    android:textColor="@color/redColor"
                    android:textSize="@dimen/text_size_2" />


                <com.spg.sgpco.customView.CustomEditText
                    android:id="@+id/edtEnterCode"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_edit_text_view"
                    android:layout_below="@+id/txt"
                    android:layout_marginStart="@dimen/margin_4"
                    android:layout_marginTop="@dimen/margin_3"
                    android:layout_marginEnd="@dimen/margin_4"
                    android:focusableInTouchMode="false"
                    app:edtIcon="@drawable/ic_person_gray"
                    app:hint="@string/code_verify_enter"
                    app:inputType="CODEVERIFY"
                    app:isRequired="true"
                    app:tvTitle="@string/code_verify" />

                <com.spg.sgpco.baseView.BaseTextView
                    android:id="@+id/btnLogin"
                    android:layout_width="@dimen/half_btn_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_below="@+id/edtEnterCode"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin_4"
                    android:layout_marginTop="@dimen/margin_3"
                    android:layout_marginEnd="@dimen/margin_4"
                    android:background="@drawable/ripplered"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_1"
                    app:fontType="Medium" />

                <com.spg.sgpco.baseView.BaseTextView
                    android:id="@+id/txtRetry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnLogin"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="@dimen/margin_1"
                    android:layout_marginTop="@dimen/margin_2"
                    android:layout_marginEnd="@dimen/margin_1"
                    android:gravity="center"
                    android:text="@string/text_retry"
                    android:textSize="@dimen/text_size_2" />

                <com.spg.sgpco.baseView.BaseRelativeLayout
                    android:id="@+id/rlDownCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtRetry"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_16"
                    android:gravity="center"
                    android:visibility="visible">

                    <com.spg.sgpco.baseView.BaseTextView
                        android:id="@+id/txtRemainingTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remainingـtime"
                        android:textColor="@color/redColor" />

                    <com.spg.sgpco.baseView.BaseTextView
                        android:id="@+id/tvCounter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_1"
                        android:layout_toEndOf="@+id/txtRemainingTime"
                        android:textColor="@color/redColor" />

                    <com.spg.sgpco.baseView.BaseTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/tvCounter"
                        android:text="@string/second"
                        android:textColor="@color/redColor" />

                </com.spg.sgpco.baseView.BaseRelativeLayout>

                <com.spg.sgpco.baseView.BaseTextView
                    android:id="@+id/btnRetyCodeVerification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rlDownCount"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_1"
                    android:text="@string/retry_code_verify" />
            </com.spg.sgpco.baseView.BaseRelativeLayout>
        </android.support.v7.widget.CardView>

    </ScrollView>

    <com.spg.sgpco.customView.RoundedLoadingView
        android:id="@+id/roundedLoadingView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</com.spg.sgpco.baseView.BaseRelativeLayout>


